--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,5 +3,6 @@
 <scroll-view class="scrollarea" scroll-y type="list">
   <view class="container">
     hwt 0606  测试修改13212
+    男同李基璇
   </view>
 </scroll-view>
